# algo-knn

./: Algo_k_+_proche_voisins.py  README.md  gui.py  iris_utils.py  pyproject.toml
src/algo_knn/: __init__.py  gui.py  iris_utils.py
