[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "algo-knn"
version="0.0.1"
dependencies = [
    "matplotlib",
    "numpy"
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.gui-scripts]
algo_knn = "algo_knn:main"